--- a/MgJava2014/Web.config
+++ b/MgJava2014/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MgJava2014-20140710114836;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MgJava2014-20140710114836.mdf" />
+    <add name="DefaultConnection" connectionString="metadata=res://*/Models.DbModel.MainDB.csdl|res://*/Models.DbModel.MainDB.ssdl|res://*/Models.DbModel.MainDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\MainDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MainDBEntities" connectionString="metadata=res://*/Models.DbModel.MainModel.csdl|res://*/Models.DbModel.MainModel.ssdl|res://*/Models.DbModel.MainModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:hqavpb49c8.database.windows.net,1433;Database=mgjava2AazPB8Lw0;User ID=lgpz@hqavpb49c8;Password=Kop3l31234;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -20,7 +21,11 @@
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
@@ -97,11 +102,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
 </configuration>
